# research-assist

./: LICENSE  README.md  README.zh-CN.md  SKILL.md  config.example.json  pyproject.toml
references/: distribution.md  profile-map-generation.md  setup-routing.md
scripts/distribution/: install_skill.sh
src/codex_research_assist/: html_fmt.py  openclaw_runner.py  review_patch.py
src/codex_research_assist/arxiv_profile_pipeline/: client.py  literature_sources.py  pipeline.py
src/codex_research_assist/zotero_mcp/: chroma_client.py  client.py  config.py  local_db.py  semantic_search.py  server.py
tests/: test_digest_summary.py  test_distribution.py  test_html_output.py  test_literature_sources.py  test_review_patch.py  test_semantic_setup.py  test_zotero_support.py
